--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -143,6 +143,8 @@
                                 <signal name="released" handler="advanced_show"/>
                               </widget>
                               <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
                                 <property name="position">0</property>
                               </packing>
                             </child>
@@ -3489,6 +3491,7 @@
                                       <widget class="GtkLabel" id="label_r_a_prefix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">| &#x41F;&#x43E;&#x431;&#x435;&#x434;&#x430; &#x430;&#x442;&#x430;&#x43A;&#x443;&#x44E;&#x449;&#x435;&#x433;&#x43E; (</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3499,6 +3502,7 @@
                                       <widget class="GtkLabel" id="label_r_a_percent">
                                         <property name="xalign">0</property>
                                         <property name="label">0</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3509,6 +3513,7 @@
                                       <widget class="GtkLabel" id="label_r_a_postfix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">%) |</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3519,6 +3524,7 @@
                                       <widget class="GtkLabel" id="label_r_d_prefix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">| &#x41F;&#x43E;&#x431;&#x435;&#x434;&#x430; &#x43E;&#x431;&#x43E;&#x440;&#x43E;&#x43D;&#x44F;&#x44E;&#x449;&#x435;&#x433;&#x43E;&#x441;&#x44F; (</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3529,6 +3535,7 @@
                                       <widget class="GtkLabel" id="label_r_d_percent">
                                         <property name="xalign">0</property>
                                         <property name="label">0</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3539,6 +3546,7 @@
                                       <widget class="GtkLabel" id="label_r_d_postfix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">%) |</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3549,6 +3557,7 @@
                                       <widget class="GtkLabel" id="label_r_w_prefix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">| &#x41D;&#x438;&#x447;&#x44C;&#x44F; (</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3559,6 +3568,7 @@
                                       <widget class="GtkLabel" id="label_r_w_percent">
                                         <property name="xalign">0</property>
                                         <property name="label">0</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3569,6 +3579,7 @@
                                       <widget class="GtkLabel" id="label_r_w_postfix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes">%) |</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3579,6 +3590,7 @@
                                       <widget class="GtkLabel" id="label_r_r_prefix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes"> &#x43F;&#x43E;&#x441;&#x43B;&#x435; ~</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3589,6 +3601,7 @@
                                       <widget class="GtkLabel" id="label_r_r_rounds">
                                         <property name="xalign">0</property>
                                         <property name="label">0</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -3599,6 +3612,7 @@
                                       <widget class="GtkLabel" id="label_r_r_postfix">
                                         <property name="xalign">0</property>
                                         <property name="label" translatable="yes"> &#x440;&#x430;&#x443;&#x43D;&#x434;&#x43E;&#x432;</property>
+                                        <property name="selectable">True</property>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -5349,9 +5363,6 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                               </packing>
                             </child>
                             <child>
-                              <placeholder/>
-                            </child>
-                            <child>
                               <widget class="GtkLabel" id="adv_a_b_207">
                                 <property name="visible">True</property>
                               </widget>
@@ -5361,6 +5372,9 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
                                 <property name="top_attach">6</property>
                                 <property name="bottom_attach">7</property>
                               </packing>
+                            </child>
+                            <child>
+                              <placeholder/>
                             </child>
                           </widget>
                         </child>
